# Lip-Interpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Lip.sln  ListFunc.sln  README.md
Lip/: Lip.vcxproj  Lip.vcxproj.filters  foo.txt  functions.txt  my-funcs.lip  notes.txt  skill_issue.txt
ListFunc/: ListFunc.vcxproj  ListFunc.vcxproj.filters  functions.txt  notes.txt  skill_issue.txt
scripts/: my-funcs.lip  script.lip
src/Interpreter/EmbeddedFunctions/: CMakeLists.txt  EmbeddedUtils.cpp
src/Interpreter/EmbeddedFunctions/Comparison/: CMakeLists.txt  FuncEqual.h  FuncGreaterOrEqual.h  FuncGreaterThan.cpp  FuncLessOrEqual.cpp  FuncLessOrEqual.h  FuncLessThan.cpp
src/Interpreter/EmbeddedFunctions/ControlFlow/: CMakeLists.txt
src/Interpreter/EmbeddedFunctions/Conversion/: CMakeLists.txt  FuncInt.cpp  FuncInt.h
src/Interpreter/EmbeddedFunctions/Function/: CMakeLists.txt  FuncAndThen.h  FuncCompose.cpp  FuncCurry.cpp
src/Interpreter/EmbeddedFunctions/InputOutput/: CMakeLists.txt  FuncPrint.cpp  FuncRead.cpp  FuncRead.h  FuncWrite.h
src/Interpreter/EmbeddedFunctions/List/: CMakeLists.txt  FuncGenerate.cpp  FuncList.h  FuncTail.h
src/Interpreter/EmbeddedFunctions/Logical/: CMakeLists.txt  FuncAnd.cpp  FuncNot.cpp  FuncNot.h  FuncOr.h
src/Interpreter/EmbeddedFunctions/Math/: CMakeLists.txt  FuncAdd.cpp  FuncMultiply.h  FuncSqrt.h  FuncSubtract.h
src/Interpreter/EmbeddedFunctions/String/: CMakeLists.txt
src/Interpreter/EmbeddedFunctions/StringAndList/: CMakeLists.txt  FuncAppend.cpp  FuncAppend.h  FuncConcat.cpp  FuncConcat.h  FuncLength.cpp
(+314 files in other folders)
